[gd_scene load_steps=5 format=3 uid="uid://s0n3wfar8602"]

[ext_resource type="Script" path="res://tower.gd" id="1_26ym5"]
[ext_resource type="Texture2D" uid="uid://pbmijq4x4nkk" path="res://icon.svg" id="2_fkwmy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wq2p4"]
radius = 76.0592

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0tcw"]
size = Vector2(493, 123)

[node name="Tower" type="Node2D"]
script = ExtResource("1_26ym5")
can_attack = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fkwmy")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_wq2p4")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2(255.5, -0.5)
shape = SubResource("RectangleShape2D_v0tcw")

[node name="Attack_timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="timeout" from="Attack_timer" to="." method="_on_attack_timer_timeout"]
